--- a/form.html
+++ b/form.html
@@ -14,28 +14,58 @@
   </head>
   <body>
     <div class="container">
-      <form action="">
-        <div class="mb-3">
-          <label for="firstName" class="form-label">First Name</label>
-          <input class="form-control" type="text" id="firstName" aria-label="default input example">
+      <p>MODAL!!</p>
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Launch demo modal
+      </button>
+
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <form action="">
+                <div class="row">
+                  <div class="col-6">
+                    <label for="firstName" class="form-label">First Name</label>
+                    <input class="form-control" type="text" id="firstName" aria-label="default input example">
+                  </div>
+                  <div class="col-6">
+                    <label for="lastName" class="form-label">Last Name</label>
+                    <input class="form-control" type="text" id="lastName" aria-label="default input example">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-6">
+                    <label for="careerFormEmail" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="careerFormEmail" placeholder="name@example.com">
+                  </div>
+                  <div class="col-6">
+                    <label for="formFile" class="form-label">Resume</label>
+                    <input class="form-control" type="file" id="formFile">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="mb-3">
+                    <label for="careerFormMessage" class="form-label">Example textarea</label>
+                    <textarea class="form-control" id="careerFormMessage" rows="3"></textarea>
+                  </div>
+                </div>
+              </form>            
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
         </div>
-        <div class="mb-3">
-          <label for="lastName" class="form-label">Last Name</label>
-          <input class="form-control" type="text" id="lastName" aria-label="default input example">
-        </div>
-        <div class="mb-3">
-          <label for="careerFormEmail" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="careerFormEmail" placeholder="name@example.com">
-        </div>
-        <div class="mb-3">
-          <label for="formFile" class="form-label">Default file input example</label>
-          <input class="form-control" type="file" id="formFile">
-        </div>
-        <div class="mb-3">
-          <label for="careerFormMessage" class="form-label">Example textarea</label>
-          <textarea class="form-control" id="careerFormMessage" rows="3"></textarea>
-        </div>
-      </form>
+      </div>
     </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
   </html>
