--- a/locationv2.html
+++ b/locationv2.html
@@ -1,4 +1,8 @@
 <!-- tel:845-354-8083 New Square -->
+<!--                   <address>
+                    33 Jefferson Ave <br>
+                    Spring Valley, NY 10977
+                  </address> -->
 
 <!doctype html>
 <html lang="en">
@@ -120,18 +124,7 @@
           </div>
           <div class="modal-body">
             <!-- Form goes here -->
-            <div class="mb-3">
-              <label for="careerFormMessage" class="form-label">Message</label>
-              <textarea class="form-control" id="careerFormMessage" rows="3"></textarea>
-            </div>
-            <div class="mb-3">
-              <label for="careerFormEmail" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="careerFormEmail" placeholder="name@example.com">
-            </div>
-            <div class="mb-3">
-              <label for="careerFormMessage" class="form-label">Message</label>
-              <textarea class="form-control" id="careerFormMessage" rows="3"></textarea>
-            </div>
+            
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -142,5 +135,6 @@
     </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </body>
 </html>
