--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
             <div class="row select">
               <div class="col-sm-6 col-xs-12">
                 <div class="card text-center">
-                  <a href="locationv2.html"><h1>Borough Park</h1></a>
+                  <a href="bp13.html"><h1>Borough Park</h1></a>
                   <address>
                     Brooklyn, NY
                   </address>
                 </div>
               </div>
               <div class="col-sm-6 col-xs-12">
-                <div class="card text-center" href="locationv2.html">
+                <div class="card text-center" href="ns.html">
                   <a href="location.html"><h1>New Square</h1></a>
                   <address>
                     Spring Valley, NY
@@ -73,6 +73,8 @@
               <a href="https://www.instagram.com/taamedenbakery" target="_blank"><i class="bi bi-instagram"></i></a>
               &nbsp&nbsp&nbsp&nbsp
               <a href="mailto:orders@tamedenbakery.com"><i class="bi bi-envelope"></i></a>
+              &nbsp&nbsp&nbsp&nbsp
+              <a href="corporate.html" class="career">Corporate</a>
             </span>
       </div>
     </footer> 
