changed file names

--- a/corporate.html
+++ b/corporate.html
@@ -29,8 +29,8 @@
                  Locations
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="locationv2.html">Borough Park</a></li>
-                  <li><a class="dropdown-item" href="#">New Square</a></li>
+                  <li><a class="dropdown-item" href="bp13.html">Borough Park</a></li>
+                  <li><a class="dropdown-item" href="ns.html">New Square</a></li>
                 </ul>
               </li>
             </ul>
