--- a/ns.html
+++ b/ns.html
@@ -70,7 +70,7 @@
         </div>
       </div>
         <div class="row menuRow mx-auto">
-          <div class="col-sm-3 d-flex justify-content-center">
+          <div class="col-sm-3 d-flex justify-content-end">
             <div class="card text-center menus align-middle">
               <div class="card-body align-middle">
                 <h5 class="card-title">Pareve</h5>
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div class="col-sm-3 d-flex justify-content-center">
-                   <div class="card text-center menus">
+            <div class="card text-center menus">
               <div class="card-body">
                 <h5 class="card-title">Dairy</h5>
                 <a href="./docs/test.pdf" target="_blank" class="btn btn-dark">Menu</a>
@@ -94,7 +94,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 d-flex justify-content-center">
+          <div class="col-sm-3 d-flex justify-content-start">
             <div class="card text-center menus">
               <div class="card-body">
                 <h5 class="card-title">Catering</h5>
