--- a/bp13.html
+++ b/bp13.html
@@ -101,7 +101,7 @@
         </div>
       </div>
     </main>
-    <footer class="footer mt-auto py-3">
+    <footer class="footer fixed-bottom mt-auto py-3">
       <div class="container text-center">
         <span class="navbar-text">
           <a href="tel:718-484-8565"><i class="bi bi-telephone"></i></a>
